--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,10 @@
         {
             "source": "/(.*)",
             "destination": "/client/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/client/index.html"
         }
     ]
 }
