--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,6 @@
     "express": "^5.2.1",
     "firebase-admin": "^13.7.0",
     "helmet": "^8.1.0",
-    "multer": "^2.1.0",
-    "uuid": "^13.0.0"
+    "multer": "^2.1.0"
   }
 }
